tests/indexer/__snapshots__/jsfmt.spec.js.snap
exports[`test A.js 1`] = `
"// No indexer should be fine
function foo0(): {} {
  return { foo: \"bar\" }
}

// Matching indexer should be fine
function foo1(): {[key: string]: string} {
  return { foo: \"bar\" }
}

// Indexer with different key type is an error when it matches
function foo2(): {[key: number]: string} {
  return { foo: \"bar\" }
}

// Matching indexer with different value type is an error
function foo3(): {[key: string]: number} {
  return { foo: \"bar\" }
}

// Indexer with different key type and different value type is twice an error
function foo4(): {[key: number]: number} {
  return { foo: \"bar\" }
}

// If key exists in object type then indexer is not matched
function foo5(): {[key: string]: number; foo: string} {
  return { foo: \"bar\" }
}

// If key exists in object type then indexer is not matched
function foo6(): {[key: number]: number; foo: string} {
  return { foo: \"bar\" }
}

// Should still complain about mistyped properties
function foo7(): {[key: string]: number; foo: number} {
  return { foo: \"bar\" }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// No indexer should be fine
// Matching indexer should be fine
// Indexer with different key type is an error when it matches
// Matching indexer with different value type is an error
// Indexer with different key type and different value type is twice an error
// If key exists in object type then indexer is not matched
// If key exists in object type then indexer is not matched
// Should still complain about mistyped properties
function foo0(): {} {
  return { foo: \"bar\" };
}

function foo1(): { [key: string]: string } {
  return { foo: \"bar\" };
}

function foo2(): { [key: number]: string } {
  return { foo: \"bar\" };
}

function foo3(): { [key: string]: number } {
  return { foo: \"bar\" };
}

function foo4(): { [key: number]: number } {
  return { foo: \"bar\" };
}

function foo5(): { [key: string]: number, foo: string } {
  return { foo: \"bar\" };
}

function foo6(): { [key: number]: number, foo: string } {
  return { foo: \"bar\" };
}

function foo7(): { [key: string]: number, foo: number } {
  return { foo: \"bar\" };
}
"
`;

exports[`test multiple.js 1`] = `
"// @flow

let tests = [
  function() {
    ({}: {
      [k1: string]: string,
      [k2: number]: number, // error: not supported (yet)
    });
  }
];
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
/* error: not supported (yet)*/
let tests = [
  function() {
    ({}: { [k1: string]: string, [k2: number]: number });
  }
];
"
`;
